Moves script files back to end of html. Page was breaking on refresh

--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <!-- Tailwind Library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
     <title>Animated Template</title>
-    <!-- AOS JS -->
-    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script defer src="script.js"></script>
-    <!-- Navigation Script -->
-    <script defer src="navbar.js"></script>
 </head>
 <body class="text-gray-800 antialiased">
 
@@ -748,4 +743,9 @@
   </footer>
   <!-- End of Footer Section -->
 </body>
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
+    <!-- Navigation Script -->
+    <script src="navbar.js"></script>
 </html>
